--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   flutter_screenutil: ^5.6.1
   flutter_dotenv: ^5.0.2
   http: ^0.13.5
+  carousel_slider: ^4.2.1
+  cached_network_image: ^3.2.3
+  firebase_core: ^2.7.0
+  cloud_firestore: ^4.4.3
+  smooth_page_indicator: ^1.0.1
 
 dev_dependencies:
   flutter_test:
