--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   textfield_search: ^0.10.0
   intl: ^0.18.0
   flutter_countdown_timer: ^4.1.0
+  duration_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
