--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   intl: ^0.18.0
   flutter_countdown_timer: ^4.1.0
   duration_picker: ^1.1.1
+  flutter_otp_text_field: ^1.1.1
+  pin_code_fields: ^7.4.0
 
 dev_dependencies:
   flutter_test:
