--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   fancy_shimmer_image: ^2.0.2
   shimmer: ^2.0.0
   never_behind_keyboard: ^1.0.2
+  file_picker: ^5.2.6
 
 dev_dependencies:
   flutter_test:
