--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   google_fonts: ^4.0.3
   toggle_switch: ^2.0.1
   flutter_screenutil: ^5.6.1
-  flutter_dotenv: ^5.0.2
+  #flutter_dotenv: ^5.0.2
   http: ^0.13.5
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
