--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,10 @@ dependencies:
   fancy_shimmer_image: ^2.0.2
   shimmer: ^2.0.0
   never_behind_keyboard: ^1.0.2
-  file_picker: ^5.2.6
+  file_picker: ^5.2.11
   lottie: ^2.3.0
   count_down_timer: ^1.0.1
+  excel: ^2.1.0
 
 dev_dependencies:
   flutter_test:
