--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   lottie: ^2.3.0
   count_down_timer: ^1.0.1
   excel: ^2.1.0
+  flutter_dnd: ^0.1.4+1
 
 dev_dependencies:
   flutter_test:
