--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   flutter_dnd: ^0.1.4+1
   permission_handler: ^10.2.0
   device_imei: ^0.0.4+1
+  flutter_windowmanager: ^0.2.0
 
 dev_dependencies:
   flutter_test:
