--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: quiz
+name: quizzed
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -28,6 +28,10 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+dependency_overrides:
+  test_api: 0.5.2
+  matcher: 0.12.16
+
 dependencies:
   flutter:
     sdk: flutter
@@ -94,7 +98,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/env/.env
     - assets/json/
   #   - images/a_dot_ham.jpeg
 
