--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,10 @@ dependencies:
   csv: ^5.0.2
   path_provider: ^2.0.15
   share_plus: ^7.0.2
+  font_awesome_flutter: 
+  url_launcher: ^6.1.11
+  install_plugin_v2: ^1.0.0
+  sqflite: ^2.2.8+4
 
 dev_dependencies:
   flutter_test:
